--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -200,6 +200,7 @@
     <ClInclude Include="..\public\ComboHud.h" />
     <ClInclude Include="..\public\ComboIcon.h" />
     <ClInclude Include="..\public\ConsumItemHud.h" />
+    <ClInclude Include="..\Public\DarkKnight.h" />
     <ClInclude Include="..\public\DecalCrash.h" />
     <ClInclude Include="..\public\DmgVIBuffer.h" />
     <ClInclude Include="..\Public\DropRock.h" />
@@ -373,6 +374,7 @@
     <ClCompile Include="..\private\ComboIcon.cpp" />
     <ClCompile Include="..\private\ConsumItemHud.cpp" />
     <ClCompile Include="..\private\Character.cpp" />
+    <ClCompile Include="..\Private\DarkKnight.cpp" />
     <ClCompile Include="..\private\DecalCrash.cpp" />
     <ClCompile Include="..\private\DmgVIBuffer.cpp" />
     <ClCompile Include="..\Private\DropRock.cpp" />
