--- a/Client/Default/Client.vcxproj.filters
+++ b/Client/Default/Client.vcxproj.filters
@@ -469,6 +469,9 @@
     <ClInclude Include="..\Public\Helmet.h">
       <Filter>02.GameObjects\Character\Equip\Helmet</Filter>
     </ClInclude>
+    <ClInclude Include="..\Public\DarkKnight.h">
+      <Filter>02.GameObjects\Character\Enemy\DarkKnight</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Client.cpp">
@@ -923,6 +926,9 @@
     </ClCompile>
     <ClCompile Include="..\Private\Helmet.cpp">
       <Filter>02.GameObjects\Character\Equip\Helmet</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Private\DarkKnight.cpp">
+      <Filter>02.GameObjects\Character\Enemy\DarkKnight</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1386,6 +1392,9 @@
     </Filter>
     <Filter Include="02.GameObjects\Character\Equip\Helmet">
       <UniqueIdentifier>{0c237a15-bc85-4561-8a75-d80e9ca8b597}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="02.GameObjects\Character\Enemy\DarkKnight">
+      <UniqueIdentifier>{09fe34f1-96b2-438e-b653-51328135d42e}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
