--- a/Assets/Scenes/BossSY.yaml
+++ b/Assets/Scenes/BossSY.yaml
@@ -40,46 +40,51 @@ GameObjects:
       Equipment: false
     RenderGroup: 1
     FrustumRange: 1
-  - Name: E_SoilDust
-    UUID: 8547115786463978880
+  - Name: E_UrsaPajangMesh
+    UUID: 18056841998117356120
     Active: true
     Layer: Default
     Instancing: false
     Type: Effect
-    PassIndex: 14
-    BillBord: true
+    PassIndex: 4
+    BillBord: false
     Com_Transform:
-      Translation: [-0.76256454, 0.497298837, 0]
-      Rotation: [2.418993, 5.68722105, -5.36247917e-08]
-      Scale: [0.987582862, 0.99685812, 0.99797374]
-    Com_VIBuffer:
-      {}
+      Translation: [0, -1.15198366e-08, -0.00751372427]
+      Rotation: [0, -21.9566536, 0]
+      Scale: [2.99991512, 0.699999988, 3.00000024]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: BombEffect3.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
     Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Dust2.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\DustSprite.dds
-      TextureNoisePath: ""
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\teaa.dds
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_Light_002_TEx_PHS.png
       TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      ScrollSpeedX: [-5.80000019, -1.39999998, 0]
+      ScrollSpeedY: [1.10000002, 0.100000001, 2.29999995]
       Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
+      Distortion2: [0.100000001, 0.100000001]
       Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.800000012
-      DistortionBias: 0.5
+      DistortionScale: 0
+      DistortionBias: 0.100000001
       FadeOut: false
-      FadeOutDuration: 0
+      FadeOutDuration: 1.20000005
       FadeOutStratTime: 0
       FadeIn: false
       FadeInDuration: 0
       FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 4
-      SpriteNumY: 8
-      SpriteTotal: 32
-      SpriteSpeed: 30
-      OffsetColor: [0, 0, 0, -0.300000012]
+      EffectDuration: 1.20000005
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [1, 0.608695626, 0, 0.0199999996]
+    Children:
+      - 10011996610097924397
   - Name: Empty Object
-    UUID: 18166019384801706195
+    UUID: 914646759704229207
     Active: true
     Layer: Default
     Instancing: false
@@ -91,113 +96,29 @@ GameObjects:
       Rotation: [0, -0, 0]
       Scale: [1, 1, 1]
     Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Player\
-      MeshFileName: Player_backup2.fbx
+      MeshFilePath: ..\..\Assets\Meshes\Monster\Ursa\
+      MeshFileName: ursa.fbx
       HasCollider: false
       Equipment: false
     RenderGroup: 1
     FrustumRange: 1
-  - Name: E_Vine
-    UUID: 13716774670570461750
+  - Name: E_UrsaPajang
+    UUID: 9588519282110584497
     Active: true
     Layer: Default
     Instancing: false
     Type: Effect
-    PassIndex: 4
-    BillBord: false
-    Com_Transform:
-      Translation: [0, -0.107978269, 0]
-      Rotation: [9.34836789e-05, -0, -0.000461467222]
-      Scale: [1.29112899, 0.607694566, 1]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: Vine.fbx
-      HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\Vine.dds
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\teaa.dds
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AESmoke_001_PS_JYW.tga
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.300000012
-      DistortionBias: 0
-      FadeOut: true
-      FadeOutDuration: 1
-      FadeOutStratTime: 3
-      FadeIn: true
-      FadeInDuration: 1
-      FadeInStratTime: 0
-      EffectDuration: 4
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0, 0, 0, 0]
-    Children:
-      - 15197127984866135284
-  - Name: E_Vine
-    UUID: 15197127984866135284
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 4
+    PassIndex: 0
     BillBord: false
     Com_Transform:
       Translation: [0, 0, 0]
-      Rotation: [179.999496, 83.8280716, 179.9991]
-      Scale: [0.722483575, 0.681455612, 0.999999881]
-    Com_Model:
-      MeshFilePath: ..\..\Assets\Meshes\Effect\
-      MeshFileName: Vine.fbx
-      HasCollider: false
-      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\Vine.dds
-    Effect_Setting:
-      TextureDiffusePath: ""
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\teaa.dds
-      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_AuraTile_004_TEX_KKJ1.png
-      TextureNormalPath: ""
-      ScrollSpeedX: [0, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0.100000001
-      DistortionBias: 0.100000001
-      FadeOut: true
-      FadeOutDuration: 1
-      FadeOutStratTime: 3
-      FadeIn: true
-      FadeInDuration: 1
-      FadeInStratTime: 0
-      EffectDuration: 4
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0, 0, 0, 0.00999999978]
-  - Name: E_Ursa_Smoke
-    UUID: 11033369472605128220
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 14
-    BillBord: false
-    Com_Transform:
-      Translation: [0, 0.0970000029, 0]
       Rotation: [0, -0, 0]
-      Scale: [3.20000005, 1, 1]
-    Com_VIBuffer:
+      Scale: [1, 0.00999999978, 1]
+    Com_Decal:
       {}
     Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Dust.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\DustSprite.dds
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\010.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_Hit_Dark01.png
       TextureNoisePath: ""
       TextureNormalPath: ""
       ScrollSpeedX: [0, 0, 0]
@@ -207,15 +128,56 @@ GameObjects:
       Distortion3: [0.100000001, 0.100000001]
       DistortionScale: 0.800000012
       DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 1.20000005
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0.5
+      FadeInStratTime: 0
+      EffectDuration: 1.20000005
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [1, 0, 0, -0.589999974]
+  - Name: E_UrsaPajangMesh
+    UUID: 10011996610097924397
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 4
+    BillBord: false
+    Com_Transform:
+      Translation: [-0.0114218816, 0, 0]
+      Rotation: [-5.4419711e-06, 81.9934692, -5.49837387e-06]
+      Scale: [2.99999857, 0.699999988, 2.99999857]
+    Com_Model:
+      MeshFilePath: ..\..\Assets\Meshes\Effect\
+      MeshFileName: BombEffect3.fbx
+      HasCollider: false
+      EffectFilePath: ..\..\Assets\Textures\Effect\Diffuse\011.dds
+    Effect_Setting:
+      TextureDiffusePath: ""
+      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\teaa.dds
+      TextureNoisePath: ..\..\Assets\Textures\Effect\Noise\FX_Light_002_TEx_PHS.png
+      TextureNormalPath: ""
+      ScrollSpeedX: [-5.80000019, -1.39999998, 0]
+      ScrollSpeedY: [1.10000002, 0.100000001, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.100000001]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0
+      DistortionBias: 0.100000001
       FadeOut: false
-      FadeOutDuration: 0
+      FadeOutDuration: 1.20000005
       FadeOutStratTime: 0
       FadeIn: false
       FadeInDuration: 0
       FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 4
-      SpriteNumY: 8
-      SpriteTotal: 32
-      SpriteSpeed: 30
-      OffsetColor: [0, 0, 0, -0.469999999]
+      EffectDuration: 1.20000005
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [1, 0.608695626, 0, 0.0299999993]
