--- a/Assets/Scenes/BossSY.yaml
+++ b/Assets/Scenes/BossSY.yaml
@@ -138,6 +138,73 @@ GameObjects:
       SpriteTotal: 0
       SpriteSpeed: 5
       OffsetColor: [1, 0, 0, -0.589999974]
+  - Name: E_SoilDecal
+    UUID: 16258897216579375896
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Effect
+    PassIndex: 0
+    BillBord: false
+    Com_Transform:
+      Translation: [0.100000001, 0.100000001, 0]
+      Rotation: [0, -0, 0]
+      Scale: [0.5, 0.100000001, 0.5]
+    Com_Decal:
+      {}
+    Effect_Setting:
+      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\Dust2.dds
+      TextureMaskPath: ..\..\Assets\Textures\Effect\DooDecal\FX_Crack_003.dds
+      TextureNoisePath: ""
+      TextureNormalPath: ""
+      ScrollSpeedX: [0, 0, 0]
+      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
+      Distortion1: [0.100000001, 0.200000003]
+      Distortion2: [0.100000001, 0.300000012]
+      Distortion3: [0.100000001, 0.100000001]
+      DistortionScale: 0.800000012
+      DistortionBias: 0.5
+      FadeOut: true
+      FadeOutDuration: 1
+      FadeOutStratTime: 0
+      FadeIn: false
+      FadeInDuration: 0.300000012
+      FadeInStratTime: 0
+      EffectDuration: 1
+      SpriteNumX: 0
+      SpriteNumY: 0
+      SpriteTotal: 0
+      SpriteSpeed: 5
+      OffsetColor: [0.311594188, 0.17386052, 0.17386052, 0]
+  - Name: O_MeteoOBB
+    UUID: 7920848272098640496
+    Active: true
+    Layer: Default
+    Instancing: false
+    Type: Object
+    PassIndex: 0
+    NumOBB: 1
+    Com_Transform:
+      Translation: [0, 0, 0]
+      Rotation: [0, -0, 0]
+      Scale: [1, 1, 1]
+    Com_OBB:
+      Center: [0, 0, 0]
+      Size: [0.5, 0.5, 0.5]
+      IsAttach: false
+      BoneName: ""
+      Offset: [0, 0, 0]
+      CollisionType: 5
+    Com_Stat:
+      Hp: [10, 0, 10, 10]
+      HpRegen: [0, 0]
+      Atk: [3, 0, 3]
+      Arm: [0, 0, 0]
+      Exp: [0, 0, 0]
+      Level: 1
+      Gold: 0
+    RenderGroup: 1
+    FrustumRange: 1
   - Name: E_UrsRing
     UUID: 12789030834387038468
     Active: true
