--- a/Assets/Scenes/TestRoomLee.yaml
+++ b/Assets/Scenes/TestRoomLee.yaml
@@ -32,7 +32,7 @@ GameObjects:
     Com_Transform:
       Translation: [0, 0, 0]
       Rotation: [0, -0, 0]
-      Scale: [5, 5, 5]
+      Scale: [15, 5, 15]
     Com_Collider:
       Center: [0, 0, 0]
       Type: Box
@@ -53,7 +53,7 @@ GameObjects:
       Equipment: false
     Translation: [0, 0, 0]
     Rotation: [0, -0, 0]
-    Scale: [5, 5, 5]
+    Scale: [15, 5, 15]
     MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Badak\
     MeshFileName: Floor1.fbx
     HasCollider: false
@@ -105,15 +105,15 @@ GameObjects:
       IsAttach: true
       BoneName: BN_Dun_L
       Offset: [0, -0.00499999989, 0]
-      CollisionType: 8
+      CollisionType: 3
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Monster\DarkKnight\
       MeshFileName: DarkKnight.fbx
       HasCollider: false
       Equipment: false
     Com_Stat:
-      Hp: [100000, 0, 100000, 1000]
-      HpRegen: [1000, 10]
+      Hp: [1000, 0, 1000, 10]
+      HpRegen: [10, 0.100000001]
       Atk: [10, 0, 0.100000001]
       Arm: [10, 0, 0.100000001]
       Exp: [0, 100000, 1000]
@@ -255,8 +255,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [1.41224837, 0.540380895, 0.14303574]
-      Rotation: [-166.325455, 7.17004204, 180]
-      Scale: [0.640315533, 0.70637691, 0.67577827]
+      Rotation: [5.9289546, -3.00319266, 0]
+      Scale: [0.639995217, 0.705577433, 0.674772382]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -320,8 +320,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-0.0168395545, 1.0680685, 0.160352141]
-      Rotation: [-166.325455, 7.17004204, 180]
-      Scale: [1.64336789, 0.564561546, 1.51909685]
+      Rotation: [5.9289546, -3.00319219, 0]
+      Scale: [1.64253855, 0.5639202, 1.51682794]
     Com_VIBuffer:
       {}
     Effect_Setting:
