--- a/Assets/Scenes/UrsaDungeon.yaml
+++ b/Assets/Scenes/UrsaDungeon.yaml
@@ -1269,7 +1269,7 @@ GameObjects:
     NumOBB: 0
     Com_Transform:
       Translation: [-7.71003485, 3.02958258e-09, -0.893863142]
-      Rotation: [-1.11217096e-05, 82.4875717, -1.12273501e-05]
+      Rotation: [-1.11217041e-05, 82.4875717, -1.12273501e-05]
       Scale: [1.5, 1.29999995, 0.99999851]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Door\
@@ -1277,7 +1277,7 @@ GameObjects:
       HasCollider: false
       Equipment: false
     Translation: [-7.71003485, 3.02958258e-09, -0.893863142]
-    Rotation: [-1.11217096e-05, 82.4875717, -1.12273501e-05]
+    Rotation: [-1.11217041e-05, 82.4875717, -1.12273501e-05]
     Scale: [1.5, 1.29999995, 0.99999851]
     MeshFilePath: ..\..\Assets\Meshes\Map\Dungeon\Door\
     MeshFileName: Door3.fbx
@@ -1640,7 +1640,7 @@ GameObjects:
     Com_Transform:
       Translation: [-1.29782748, 0, 3.21683025]
       Rotation: [90, -0, 0]
-      Scale: [0.299980432, 0.300000012, 0.300000012]
+      Scale: [0.299980372, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1648,7 +1648,7 @@ GameObjects:
       Equipment: false
     Translation: [-1.29782748, 0, 3.21683025]
     Rotation: [90, -0, 0]
-    Scale: [0.299980432, 0.300000012, 0.300000012]
+    Scale: [0.299980372, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1665,7 +1665,7 @@ GameObjects:
     Com_Transform:
       Translation: [-2.97619867, 0, 2.27278042]
       Rotation: [90, -0, 0]
-      Scale: [0.299972504, 0.300000012, 0.300000012]
+      Scale: [0.299972445, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1673,7 +1673,7 @@ GameObjects:
       Equipment: false
     Translation: [-2.97619867, 0, 2.27278042]
     Rotation: [90, -0, 0]
-    Scale: [0.299972504, 0.300000012, 0.300000012]
+    Scale: [0.299972445, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1690,7 +1690,7 @@ GameObjects:
     Com_Transform:
       Translation: [2.38819623, -0.00699390192, 1.11379468]
       Rotation: [90, -0, 0]
-      Scale: [0.299982488, 0.300000012, 0.300000012]
+      Scale: [0.299982429, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1698,7 +1698,7 @@ GameObjects:
       Equipment: false
     Translation: [2.38819623, -0.00699390192, 1.11379468]
     Rotation: [90, -0, 0]
-    Scale: [0.299982488, 0.300000012, 0.300000012]
+    Scale: [0.299982429, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1715,7 +1715,7 @@ GameObjects:
     Com_Transform:
       Translation: [-2.97583151, 1.37266554e-07, -3.1402936]
       Rotation: [90, -0, 0]
-      Scale: [0.299964458, 0.300000012, 0.300000012]
+      Scale: [0.299964398, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1723,7 +1723,7 @@ GameObjects:
       Equipment: false
     Translation: [-2.97583151, 1.37266554e-07, -3.1402936]
     Rotation: [90, -0, 0]
-    Scale: [0.299964458, 0.300000012, 0.300000012]
+    Scale: [0.299964398, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1740,7 +1740,7 @@ GameObjects:
     Com_Transform:
       Translation: [5.89712811, 1.10119771e-07, -3.25622416]
       Rotation: [90, -0, 0]
-      Scale: [0.29991895, 0.300000012, 0.300000012]
+      Scale: [0.29991889, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1748,7 +1748,7 @@ GameObjects:
       Equipment: false
     Translation: [5.89712811, 1.10119771e-07, -3.25622416]
     Rotation: [90, -0, 0]
-    Scale: [0.29991895, 0.300000012, 0.300000012]
+    Scale: [0.29991889, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1765,7 +1765,7 @@ GameObjects:
     Com_Transform:
       Translation: [4.24012089, 7.08392704e-08, -4.04402351]
       Rotation: [90, -0, 0]
-      Scale: [0.299981326, 0.300000012, 0.300000012]
+      Scale: [0.299981266, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1773,7 +1773,7 @@ GameObjects:
       Equipment: false
     Translation: [4.24012089, 7.08392704e-08, -4.04402351]
     Rotation: [90, -0, 0]
-    Scale: [0.299981326, 0.300000012, 0.300000012]
+    Scale: [0.299981266, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1790,7 +1790,7 @@ GameObjects:
     Com_Transform:
       Translation: [-7.04490614, 0.0625032261, -2.38052249]
       Rotation: [90, -0, 0]
-      Scale: [0.299980611, 0.300000012, 0.300000012]
+      Scale: [0.299980551, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1798,7 +1798,7 @@ GameObjects:
       Equipment: false
     Translation: [-7.04490614, 0.0625032261, -2.38052249]
     Rotation: [90, -0, 0]
-    Scale: [0.299980611, 0.300000012, 0.300000012]
+    Scale: [0.299980551, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1815,7 +1815,7 @@ GameObjects:
     Com_Transform:
       Translation: [0.142843485, -4.84576539e-08, -5.559834]
       Rotation: [90, -0, 0]
-      Scale: [0.299967647, 0.300000012, 0.300000012]
+      Scale: [0.299967587, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1823,7 +1823,7 @@ GameObjects:
       Equipment: false
     Translation: [0.142843485, -4.84576539e-08, -5.559834]
     Rotation: [90, -0, 0]
-    Scale: [0.299967647, 0.300000012, 0.300000012]
+    Scale: [0.299967587, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1865,7 +1865,7 @@ GameObjects:
     Com_Transform:
       Translation: [0.667874455, -1.39228632e-07, 3.18518066]
       Rotation: [90, -0, 0]
-      Scale: [0.299922794, 0.300000012, 0.300000012]
+      Scale: [0.299922734, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi4.fbx
@@ -1873,7 +1873,7 @@ GameObjects:
       Equipment: false
     Translation: [0.667874455, -1.39228632e-07, 3.18518066]
     Rotation: [90, -0, 0]
-    Scale: [0.299922794, 0.300000012, 0.300000012]
+    Scale: [0.299922734, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi4.fbx
     HasCollider: false
@@ -1890,7 +1890,7 @@ GameObjects:
     Com_Transform:
       Translation: [6.12454319, 0.00708128279, 3.90228987]
       Rotation: [90, -0, 0]
-      Scale: [0.29983145, 0.300000012, 0.300000012]
+      Scale: [0.29983139, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi3.fbx
@@ -1898,7 +1898,7 @@ GameObjects:
       Equipment: false
     Translation: [6.12454319, 0.00708128279, 3.90228987]
     Rotation: [90, -0, 0]
-    Scale: [0.29983145, 0.300000012, 0.300000012]
+    Scale: [0.29983139, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi3.fbx
     HasCollider: false
@@ -1915,7 +1915,7 @@ GameObjects:
     Com_Transform:
       Translation: [-5.17473173, -1.37816713e-07, 4.51198959]
       Rotation: [90, -0, 0]
-      Scale: [0.299642444, 0.300000012, 0.300000012]
+      Scale: [0.299642384, 0.300000012, 0.300000012]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: zandi3.fbx
@@ -1923,7 +1923,7 @@ GameObjects:
       Equipment: false
     Translation: [-5.17473173, -1.37816713e-07, 4.51198959]
     Rotation: [90, -0, 0]
-    Scale: [0.299642444, 0.300000012, 0.300000012]
+    Scale: [0.299642384, 0.300000012, 0.300000012]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: zandi3.fbx
     HasCollider: false
@@ -2405,8 +2405,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-4.35752392, 4.18229628, -7.10967112]
-      Rotation: [4.77084351, 10.1090565, -3.25213904e-07]
-      Scale: [1.35568309, 2.10947251, 8.04278469]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [1.35574281, 2.10940552, 8.04235172]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2443,8 +2443,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-7.5999999, 4.06499147, 0.38495189]
-      Rotation: [4.77084398, 10.1090565, -3.25213932e-07]
-      Scale: [1.31742811, 2.03001237, 6.72911167]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [1.31748569, 2.02994847, 6.72874641]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2481,8 +2481,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [-3.42898369, 4.09444904, 6.71673107]
-      Rotation: [4.77084398, 10.1090565, -3.25213932e-07]
-      Scale: [1.28582621, 1.69217312, 3.94646525]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [1.28588367, 1.69211721, 3.94624305]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2519,8 +2519,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [4.19999981, 4.10704279, 6.9000001]
-      Rotation: [4.77084398, 10.1090555, -3.25213904e-07]
-      Scale: [1.28567195, 1.69373918, 3.95553327]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [1.28572941, 1.69368196, 3.95530915]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2557,8 +2557,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [8.3721447, 4.04717731, 0.21047309]
-      Rotation: [4.77084351, 10.1090574, -3.25213932e-07]
-      Scale: [1.2901113, 1.6639533, 3.78342605]
+      Rotation: [11.3099308, -0, 0]
+      Scale: [1.29016781, 1.66389775, 3.78321362]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2595,8 +2595,8 @@ GameObjects:
     BillBord: true
     Com_Transform:
       Translation: [4.79500008, 4.20926952, -6.50600004]
-      Rotation: [4.77084303, 10.1090565, -3.25213932e-07]
-      Scale: [1.29117358, 1.65619469, 3.72941351]
+      Rotation: [11.3099318, -0, 0]
+      Scale: [1.29122972, 1.65613878, 3.72920418]
     Com_VIBuffer:
       {}
     Effect_Setting:
@@ -2634,7 +2634,7 @@ GameObjects:
     Com_Transform:
       Translation: [-4.31833315, 2.37372112, 5.73253393]
       Rotation: [90.221817, -25.6933441, -0.0962173268]
-      Scale: [2.0309186, 0.999991775, 1.15790236]
+      Scale: [2.0309186, 0.999991775, 1.15790212]
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
       MeshFileName: Grass6.fbx
@@ -2642,7 +2642,7 @@ GameObjects:
       Equipment: false
     Translation: [-4.31833315, 2.37372112, 5.73253393]
     Rotation: [90.221817, -25.6933441, -0.0962173268]
-    Scale: [2.0309186, 0.999991775, 1.15790236]
+    Scale: [2.0309186, 0.999991775, 1.15790212]
     MeshFilePath: ..\..\Assets\Meshes\Map\Grass\basic\
     MeshFileName: Grass6.fbx
     HasCollider: false
@@ -2673,54 +2673,6 @@ GameObjects:
     HasCollider: false
     RenderGroup: 1
     FrustumRange: 1
-  - Name: E_IIBlood
-    UUID: 11724052947716288660
-    Active: true
-    Layer: Default
-    Instancing: false
-    Type: Effect
-    PassIndex: 0
-    BillBord: false
-    Com_Transform:
-      Translation: [-0.121509969, 0.369528085, -1.80380046]
-      Rotation: [-166.09024, 5.90100288, -179.999893]
-      Scale: [0.99855417, 1.0005976, 1.0012449]
-    Com_RectInstance:
-      Shape: 1
-      InstNum: 100
-      Color: [0.579720497, -0.0277216285, 0, 0]
-      Speed: 1.79999995
-      LifeTime: 2.0999999
-      Size: 0.699999988
-      StartRadian: 1.5
-      RadiationAngle: 50
-      LerpColor: true
-      SrcColor: [0.753623188, 0.0327662192, 0, 0]
-      DestColor: [0.659420252, 0, 0, 0]
-    Effect_Setting:
-      TextureDiffusePath: ..\..\Assets\Textures\Effect\Diffuse\001.dds
-      TextureMaskPath: ..\..\Assets\Textures\Effect\Mask\FX_blood_005_TEX_CJH_1.png
-      TextureNoisePath: ""
-      TextureNormalPath: ""
-      ScrollSpeedX: [2.29999995, 0, 0]
-      ScrollSpeedY: [1.29999995, 2.0999999, 2.29999995]
-      Distortion1: [0.100000001, 0.200000003]
-      Distortion2: [0.100000001, 0.300000012]
-      Distortion3: [0.100000001, 0.100000001]
-      DistortionScale: 0
-      DistortionBias: 0
-      FadeOut: false
-      FadeOutDuration: 0
-      FadeOutStratTime: 0
-      FadeIn: false
-      FadeInDuration: 0
-      FadeInStratTime: 0
-      EffectDuration: 0
-      SpriteNumX: 0
-      SpriteNumY: 0
-      SpriteTotal: 0
-      SpriteSpeed: 5
-      OffsetColor: [0, 0, 0, 0]
   - Name: Tower
     UUID: 5850245612417314384
     Active: true
