--- a/Assets/Scenes/Boss_Ursa.yaml
+++ b/Assets/Scenes/Boss_Ursa.yaml
@@ -7,16 +7,16 @@ GameObjects:
     Instancing: false
     Type: Object
     PassIndex: 0
-    NumOBB: 3
+    NumOBB: 4
     Com_Transform:
-      Translation: [0, 0, -4.7]
+      Translation: [0, 0, -4.69999981]
       Rotation: [0, -0, 0]
       Scale: [1, 1, 1]
     Com_Collider:
       Center: [0, 0, 0]
       Type: Capsule
-      Radius: 0.2
-      Height: 0.1
+      Radius: 0.200000003
+      Height: 0.100000001
       Angle:
         - 0
         - 0
@@ -47,16 +47,23 @@ GameObjects:
       BoneName: BN_Axe_R
       Offset: [0, 0.0500000007, -0.400000006]
       CollisionType: 3
+    Com_OBB3:
+      Center: [0, 0, 0]
+      Size: [0.25, 0.349999994, 0.349999994]
+      IsAttach: true
+      BoneName: Bip01-Head
+      Offset: [0.0500000007, 0, 0]
+      CollisionType: 3
     Com_Model:
       MeshFilePath: ..\..\Assets\Meshes\Monster\Ursa\
       MeshFileName: ursa.fbx
       HasCollider: false
       Equipment: false
     Com_Stat:
-      Hp: [5000, 0, 5000, 500]
-      HpRegen: [500, 0.1]
-      Atk: [500, 0, 10]
-      Arm: [500, 0, 10]
+      Hp: [4500, 0, 4500, 500]
+      HpRegen: [0.900000036, 0.100000001]
+      Atk: [90, 0, 10]
+      Arm: [90, 0, 10]
       Exp: [0, 0, 0]
       Level: 9
       Gold: 0
